--- a/_includes/before_body.html
+++ b/_includes/before_body.html
@@ -16,7 +16,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="./students.html">about</a></li>
+        <li><a href="./students.html"><i class="fa fa-users"></i> students</a></li>
       </ul>
     </div>
   </div>
