--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="scripts/avatars.js"></script>
     
-    <link href="libs/bootstrap-3.3.1/css/readable.min.css" rel="stylesheet">
+    <link href="libs/bootstrap-3.3.1/css/cosmo.min.css" rel="stylesheet">
     <!--
     Font Awesome: http://fortawesome.github.io/Font-Awesome/icons
     Octicons:     https://octicons.github.com
