cleanup, Interaction w/ feedback form, stickies

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/screen.css" media="screen"/>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="scripts/avatars.js"></script>
-    
+    <script src="libs/avatars.js"></script>
+
     <link href="libs/bootstrap-3.3.1/css/cosmo.min.css" rel="stylesheet">
     <!--
     Font Awesome: http://fortawesome.github.io/Font-Awesome/icons
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.css">
     <link rel="stylesheet" href="styles/styles.css">
-    
+
   </head>
   <body>
     {% include before_body.html %}
