comment out last_modified_at - not working

--- a/_includes/in_header.html
+++ b/_includes/in_header.html
@@ -1,4 +1,6 @@
 
+<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico">
+
 <script src="{{ site.baseurl }}/doc/libs/jquery-1.11.0/jquery.min.js"></script>
 <!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
 <link href="{{ site.baseurl }}/doc/libs/bootstrap-3.3.1/css/cosmo.min.css" rel="stylesheet" />
