--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h4 class="date"><em>{{ page.subtitle }}</em></h4>
       {% endif %}
       <!--<h4 class="date"><em>{{ site.time | date_to_string }}</em></h4>-->
-      <h4 class="date"><em>{{ page.last_modified_at | date: '%F %H:%M' }}</em></h4>
+      <!--<h4 class="date"><em>{{ page.last_modified_at | date: '%F %H:%M' }}</em></h4>-->
     </div>
     
     {{ content }}
