--- a/doc/_includes/before_body.html
+++ b/doc/_includes/before_body.html
@@ -3,7 +3,7 @@
 <div class="navbar navbar-default navbar-fixed-top navbar-transparent">
   <div class="container">
     <div class="navbar-header">
-      <a href="./" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
+      <a href="../" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -13,7 +13,7 @@
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li>
-          <a href="./schedule.html"><i class="fa fa-calendar"></i> schedule</a>
+          <a href="../schedule.html"><i class="fa fa-calendar"></i> schedule</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
