--- a/_includes/before_body.html
+++ b/_includes/before_body.html
@@ -11,11 +11,13 @@
       </button>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
+      <!--
       <ul class="nav navbar-nav">
         <li>
-          <a href="{{ site.baseurl }}/schedule.html"><i class="fa fa-calendar"></i> schedule</a>
+          <a href="{{ site.baseurl }}/#schedule"><i class="fa fa-calendar"></i> schedule</a>
         </li>
       </ul>
+      -->
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ site.baseurl }}/students/"><i class="fa fa-users"></i> students</a></li>
       </ul>
