lit -> refs, setup

--- a/_includes/in_header.html
+++ b/_includes/in_header.html
@@ -40,6 +40,7 @@ Octicons:     https://octicons.github.com
 <link rel="stylesheet" href="{{ site.baseurl }}/libs/font-awesome-4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/libs/octicons-3.3.0/octicons.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/styles/styles.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/styles/syntax.css">
 
 <link rel="stylesheet" href="{{ site.baseurl }}/styles/screen.css" media="screen"/>
 <!--<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>-->
